--- a/ToDo.txt
+++ b/ToDo.txt
@@ -21,9 +21,6 @@
 // A partir del 649 no tienen 2º GRITO.
 
 
-
-
-
 - TO DO - LISTA POR HACER:
     [✅] VISTA ALEATORIA, al entrar en la POKÉDEX.
     [✅] BARRA SCROLL: Personalizada.
@@ -34,25 +31,13 @@
     [  ] BARRA DE BÚSQUEDA: en nav parte derecha.
     [  ] LOGO CONANCOS.DEV: en nav parte izquierda.
     [  ] FOOTER: en body "make it with ❤🙌🤙 Hazte con todos!"
-    [  ] CLICK EN LOADER, cambia de color => azul/blanco => rojo/blonco.
+    [❌] CLICK EN LOADER, cambia de color => azul/blanco => rojo/blonco.
     [✅] MANEJO DE ERRORES: Para cuando no hay animación ó 2º grito.
     [✅] BOTONES: 1ª Generación, 2ª Gen. 3ª, 4ª, 5ª, 6ª, 7ª, 8ª, 9ª! y los 10001 al 10277
     [✅] SUBIR: a gitHub, y al servidor.
     [✅] EL RESPONSIVE, para TODOS los móviles, sin fallo.
     [✅] Deshacer los eventos de escucha en el forEach de cada botón pues consume memoria, usar Delegación de propagación en contenedor padre.
     [✅] Construir función y meter las funciones de los botones como propiedades, así podré llamarlas por el nombre dinámicamente.
+    [✅] Configurar los gritos para las cards.
     [  ] Construir el resto de funciones que representan las llamadas fetch para el resto de botones.
-    [  ] Configurar los gritos para las cards.
-  ❗ [ ] SEGURAMENTE, tendré que eliminar el archivo "aleatorio.js" desde gitHub, ya que le cambié el nombre a "funciones.js"
-
-
-    //
-    let total = 0;
-            pokemonArrayTipos.forEach(pokemon => {
-                const tipos = pokemon.types.map(tipo => tipo.type.name);
-
-                if (botonTargeret === "todos")
-            })
-            console.log(pokemonArray[0])
-            loader.style.display = "none";
-            
+    [  ] El acceso más rápido a la lista de pokémon por tipo o generación.
